AST only version (no regex fallback)